[package]
name = "agent-deadline"
version = "0.1.0"
edition = "2021"
description = "Cooperative per-task deadline for AI agent runs"
license = "MIT"
repository = "https://github.com/MukundaKatta/agent-deadline-rs"
keywords = ["agent", "deadline", "timeout", "cooperative", "llm"]
categories = ["asynchronous"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
